[gd_scene load_steps=4 format=2]

[ext_resource path="res://overlap/PlayerEnterActionArea.gd" type="Script" id=1]
[ext_resource path="res://ui/action_dialog/ButtonPressHint.tscn" type="PackedScene" id=2]

[sub_resource type="CircleShape2D" id=4]
radius = 15.0

[node name="PlayerEnterActionArea" type="Node2D"]
script = ExtResource( 1 )

[node name="PlayerHintArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHintArea"]
shape = SubResource( 4 )

[node name="ButtonPressHint" parent="." instance=ExtResource( 2 )]
visible = false
margin_left = -11.0
margin_top = -23.0
margin_right = -11.0
margin_bottom = -23.0

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="PlayerHintArea" to="." method="_on_PlayerHintArea_body_entered"]
[connection signal="body_exited" from="PlayerHintArea" to="." method="_on_PlayerHintArea_body_exited"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
